--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     // Clé API NewsData.io filtrée pour Le Monde
     const newsAPIUrl = "https://newsdata.io/api/1/news?apikey=pub_515353533f3d243a848d5ed6c74963418ece7&country=fr&language=fr&category=politics&domainurl=lemonde.fr";
 
-    // URL d'API MBFC (assurez-vous que c'est correct)
-    const mbfcAPIUrl = "https://api.mbfc.com/v1/getBias"; // Exemple d'URL API, à vérifier selon la documentation réelle
-    const mbfcAPIKey = "votre_cle_api_mbfc"; // Clé API de MBFC, à remplacer par la vôtre
+    // URL et Bearer Token fournis par MBFC
+    const mbfcAPIUrl = "https://sheetdb.io/api/v1/p3dkx7064mky2";
+    const mbfcBearerToken = "hfc8ufkknwmc4r7kpgcrw4faarzoobn5264m7159";
 
     // Fonction pour récupérer un article via l'API de NewsData.io
     async function fetchArticle() {
@@ -110,10 +110,10 @@
     async function analyzeSource(domain) {
         try {
             // Envoi de la requête à l'API MBFC avec le domaine
-            const response = await fetch(`${mbfcAPIUrl}?domain=${domain}`, {
+            const response = await fetch(mbfcAPIUrl, {
                 method: 'GET',
                 headers: {
-                    'Authorization': `Bearer ${mbfcAPIKey}`,
+                    'Authorization': `Bearer ${mbfcBearerToken}`,
                     'Content-Type': 'application/json'
                 }
             });
@@ -127,14 +127,17 @@
 
             const biasBar = document.getElementById('bias-bar');
 
+            // Recherche dans les données pour trouver le domaine correspondant
+            const source = data.find(s => s.Domain && s.Domain.toLowerCase() === domain.toLowerCase());
+
             // Vérification de la présence du biais politique
-            if (data && data.bias) {
-                // Ajuster l'affichage de la barre de biais selon le champ "bias"
-                if (data.bias === 'Left') {
+            if (source && source.Bias) {
+                // Ajuster l'affichage de la barre de biais selon le champ "Bias"
+                if (source.Bias === 'Left') {
                     biasBar.innerHTML = '<div class="left">Gauche</div><div></div><div></div>';
-                } else if (data.bias === 'Center') {
+                } else if (source.Bias === 'Center') {
                     biasBar.innerHTML = '<div></div><div class="center">Centre</div><div></div>';
-                } else if (data.bias === 'Right') {
+                } else if (source.Bias === 'Right') {
                     biasBar.innerHTML = '<div></div><div></div><div class="right">Droite</div>';
                 } else {
                     biasBar.innerHTML = '<div class="unknown">Orientation inconnue</div>';
