--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             }
 
             const data = await response.json();
-            console.log("Réponse de l'API MBFC:", data);  // Afficher les données complètes pour débogage
+            console.log("Réponse complète de l'API MBFC:", data);  // Afficher les données complètes pour débogage
 
             const biasBar = document.getElementById('bias-bar');
 
