--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </div>
 
 <script>
-    const newsAPIUrl = "https://newsdata.io/api/1/news?apikey=pub_515353533f3d243a848d5ed6c74963418ece7&country=fr&language=fr&category=politics&q=politics"; // URL pour obtenir des articles de NewsData.io
+    const newsAPIUrl = "https://newsdata.io/api/1/news?apikey=pub_515353533f3d243a848d5ed6c74963418ece7&q=gouvernement&country=fr&language=fr&category=politics "; // URL pour obtenir des articles de NewsData.io
     const mbfcAPIUrl = "https://sheetdb.io/api/v1/p3dkx7064mky2";
     const mbfcBearerToken = "hfc8ufkknwmc4r7kpgcrw4faarzoobn5264m7159";
 
