--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biais Politique des Médias</title>
+    <title>Articles Politiques - Analyse des Biais</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -24,14 +24,18 @@
         }
         .bias-bar {
             display: flex;
-            height: 30px;
             margin-top: 10px;
+            height: 30px;
+        }
+        .bias-bar div {
+            text-align: center;
+            color: white;
         }
         .left {
             background-color: #ff4c4c;
         }
         .center {
-            background-color: #ffffff;
+            background-color: #4caf50;
         }
         .right {
             background-color: #2196F3;
@@ -45,18 +49,19 @@
 <body>
 
 <div class="container">
-    <h1 id="topic-title">Articles sur le sujet</h1>
+    <h1 id="article-title">Articles sur le même sujet</h1>
     <div id="articles-list"></div>
     <h2>Répartition des Biais Politiques des Médias</h2>
-    <div class="bias-bar" id="bias-bar"></div>
+    <div class="bias-bar" id="bias-bar">
+        <!-- La barre d'orientation médiatique sera ici -->
+    </div>
 </div>
 
 <script>
-    const newsAPIUrl = "https://newsdata.io/api/1/news?apikey=pub_515353533f3d243a848d5ed6c74963418ece7&q=gouvernement&country=fr&language=fr&category=politics "; // URL pour obtenir des articles de NewsData.io
+    const newsAPIUrl = "https://newsdata.io/api/1/news?apikey=pub_515353533f3d243a848d5ed6c74963418ece7&country=fr&language=fr&category=politics";
     const mbfcAPIUrl = "https://sheetdb.io/api/v1/p3dkx7064mky2";
     const mbfcBearerToken = "hfc8ufkknwmc4r7kpgcrw4faarzoobn5264m7159";
 
-    // Variables pour stocker les biais
     let leftCount = 0, centerCount = 0, rightCount = 0, totalCount = 0;
 
     // Fonction pour récupérer des articles sur un sujet
@@ -64,9 +69,6 @@
         try {
             const response = await fetch(newsAPIUrl);
             const data = await response.json();
-
-            console.log("Articles récupérés : ", data); // Log pour voir la structure des articles
-
             const articles = data.results;
             const articleList = document.getElementById('articles-list');
 
@@ -77,7 +79,7 @@
                 articleList.appendChild(articleElement);
             });
 
-            // Analyser chaque article pour obtenir le biais des médias
+            // Analyser les biais politiques des médias
             await analyzeArticles(articles);
 
         } catch (error) {
@@ -85,16 +87,13 @@
         }
     }
 
-    // Fonction pour analyser les médias de chaque article
+    // Fonction pour analyser les biais des médias pour chaque article
     async function analyzeArticles(articles) {
-        const domains = [...new Set(articles.map(article => article.domain || article.link.split('/')[2]))]; // Extraire les domaines
-        console.log("Domaines extraits :", domains); // Log pour voir les domaines extraits
+        const domains = [...new Set(articles.map(article => article.domain || article.link.split('/')[2]))];
+        totalCount = domains.length;
 
-        totalCount = domains.length; // Total de médias à analyser
-
-        // Récupérer les biais pour chaque média
+        // Analyser les biais pour chaque domaine
         for (let domain of domains) {
-            console.log("Analyse du domaine : ", domain); // Log pour voir quel domaine est analysé
             await analyzeSource(domain);
         }
 
@@ -102,7 +101,7 @@
         displayBiasBar();
     }
 
-    // Fonction pour analyser une source (média) avec l'API MBFC
+    // Fonction pour analyser un média via MBFC
     async function analyzeSource(domain) {
         try {
             const response = await fetch(mbfcAPIUrl, {
@@ -118,10 +117,11 @@
             }
 
             const data = await response.json();
-            console.log("Données MBFC pour le domaine :", domain, data); // Log pour voir les données MBFC récupérées
+            console.log(`Données MBFC pour ${domain}:`, data);
 
             const source = data.find(s => s.Domain && s.Domain.toLowerCase() === domain.toLowerCase());
 
+            // Comptabiliser les biais politiques
             if (source && source.Bias) {
                 if (source.Bias === 'Left' || source.Bias === 'Left-Center') {
                     leftCount++;
@@ -132,19 +132,17 @@
                 }
             }
         } catch (error) {
-            console.error("Erreur lors de l'analyse de la source : ", error);
+            console.error(`Erreur lors de l'analyse du domaine ${domain}: `, error);
         }
     }
 
-    // Fonction pour afficher la barre de répartition des biais
+    // Fonction pour afficher la répartition des biais politiques
     function displayBiasBar() {
         const biasBar = document.getElementById('bias-bar');
 
         const leftPercentage = (leftCount / totalCount) * 100 || 0;
         const centerPercentage = (centerCount / totalCount) * 100 || 0;
         const rightPercentage = (rightCount / totalCount) * 100 || 0;
-
-        console.log(`Pourcentages : Gauche ${leftPercentage}% | Centre ${centerPercentage}% | Droite ${rightPercentage}%`); // Log pour voir les pourcentages calculés
 
         const leftBar = document.createElement('div');
         leftBar.classList.add('left');
@@ -163,9 +161,8 @@
         biasBar.appendChild(rightBar);
     }
 
-    // Charger les articles et analyser les biais au chargement de la page
+    // Charger les articles au chargement de la page
     fetchArticles();
-
 </script>
 
 </body>
